Worked on Teambuilder functionality

--- a/sub-cites/poke-teams.html
+++ b/sub-cites/poke-teams.html
@@ -142,6 +142,56 @@
 			</div>
 		</div>
 	</div>
+	
+	<a name="seasonal">
+	<h2 class="black-bg"> Seasonal </h2>
+	<div class="container">
+		<div class="white-outline centering third-width">	
+			<h2> Spooky Team 2018 </h2>
+			<div>
+				<img src="https://play.pokemonshowdown.com/sprites/xyani/crobat.gif">
+				<br>
+				<span class="purple-text gray-button"> Crobat </span>
+			</div>
+			<br>
+			<div>
+				<img src="https://play.pokemonshowdown.com/sprites/xyani/zoroark.gif">
+				<br>
+				<span class="purple-text gray-button"> Zoroark </span>
+			</div>
+			<br>
+			<div>
+				<img src="https://play.pokemonshowdown.com/sprites/xyani/chandelure.gif">
+				<br>
+				<span class="purple-text gray-button"> Chandelure </span>
+			</div>
+			<br>
+			<br>
+			<div>
+				<img src="https://play.pokemonshowdown.com/sprites/xyani/ariados.gif">
+				<br>
+				<span class="purple-text gray-button"> Ariados </span>
+			</div>
+			<br>
+			<div>
+				<img src="https://play.pokemonshowdown.com/sprites/xyani/gourgeist.gif">
+				<br>
+				<span class="purple-text gray-button"> Gourgeist </span>
+			</div>
+			<br>
+			<div>
+				<img src="https://play.pokemonshowdown.com/sprites/xyani/banette-mega.gif">
+				<br>
+				<span class="purple-text gray-button"> Banette 
+				<img width="15px" src="https://pokemythology.net/conteudo/imgs/info/equip_keystone.png"> </span>
+			</div>
+		</div>
+		<div class="white-outline centering third-width">
+		</div>
+		<div class="white-outline centering third-width">
+		</div>
+	</div>
+	
 	<a name="game-playthroughs">
 	<h2 class="black-bg"> Game Playthroughs </h2>
 	<div class="container"> 
