Updated Pokemon site

--- a/sub-cites/poke-teams.html
+++ b/sub-cites/poke-teams.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Brandon's Pok&eacute;mon Page</title>
+	<title>Brandon's Pok&eacute;mon Teams</title>
 	<link rel="stylesheet" href="../styles.css">
 	<link rel="stylesheet" href="styles-poke.css">
 </head>
@@ -98,47 +98,18 @@
 			</div>
 		</div>
 		
-		<div class="white-outline centering third-width">	
-			<h2 class="white-text"> Recent Team - Pok&eacute;mon Sun and Ultra Sun </h2>
+		<div class="white-outline centering third-width">
+			<h2 class="white-text"> Current Team - Pok&eacute;mon Let's Go Eevee! </h2>
 			<div>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/toucannon.gif">
+				<img src="https://play.pokemonshowdown.com/sprites/xyani/pikachu-f.gif">
 				<br>
-				<span class="almost-black-text gray-button"> Toucannon </span>
+				<span class="yellow-text gray-button"> Pikachu </span>
 			</div>
 			<br>
 			<div>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/lycanroc.gif">
+				<img src="https://play.pokemonshowdown.com/sprites/xyani/eevee.gif">
 				<br>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/lycanroc-dusk.gif">
-				<br>
-				<span class="tan-text gray-button"> Lycanroc </span>
-			</div>
-			<br>
-			<div>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/ninetales-alola.gif">
-				<br>
-				<span class="white-text gray-button"> Ninetales </span>	
-			</div>
-			<br>
-			<div>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/wishiwashi.gif">
-				<br>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/wishiwashi-school.gif">
-				<br>
-				<span class="light-blue-text gray-button"> Wishiwashi </span>
-			</div>
-			<br>
-			<div>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/palossand.gif">
-				<br>
-				<span class="sand-text gray-button"> Palossand </span>
-			</div>
-			<br>
-			<div>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/incineroar.gif">
-				<br>
-				<span class="red-text gray-button"> Incineroar 
-				<img width="25px" src="gaming/firium-z.png"> </span>
+				<span class="tan-text gray-button"> Eevee </span>
 			</div>
 		</div>
 	</div>
@@ -195,6 +166,50 @@
 	<a name="game-playthroughs">
 	<h2 class="black-bg"> Game Playthroughs </h2>
 	<div class="container"> 
+		<div class="white-outline centering third-width">	
+			<h2 class="white-text"> Pok&eacute;mon Sun and Ultra Sun </h2>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/toucannon.gif">
+				<br>
+				<span class="almost-black-text gray-button"> Toucannon </span>
+			</div>
+			<br>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/lycanroc.gif">
+				<br>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/lycanroc-dusk.gif">
+				<br>
+				<span class="tan-text gray-button"> Lycanroc </span>
+			</div>
+			<br>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/ninetales-alola.gif">
+				<br>
+				<span class="white-text gray-button"> Ninetales </span>	
+			</div>
+			<br>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/wishiwashi.gif">
+				<br>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/wishiwashi-school.gif">
+				<br>
+				<span class="light-blue-text gray-button"> Wishiwashi </span>
+			</div>
+			<br>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/palossand.gif">
+				<br>
+				<span class="sand-text gray-button"> Palossand </span>
+			</div>
+			<br>
+			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/incineroar.gif">
+				<br>
+				<span class="red-text gray-button"> Incineroar 
+				<img width="25px" src="gaming/firium-z.png"> </span>
+			</div>
+		</div>
+		
 		<div class="white-outline centering third-width">
 			<h2 class="white-text"> Pok&eacute;mon Omega Ruby </h2>
 			<div>
@@ -210,7 +225,7 @@
 			</div>
 			<br>
 			<div>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/cacturne.gif">
+				<img src="https://play.pokemonshowdown.com/sprites/xyani-shiny/cacturne.gif">
 				<br>
 				<span class="green-text gray-button"> Cacturne </span>
 			</div>
@@ -382,6 +397,12 @@
 			</div>
 			<br>
 			<div>
+				<img src="http://www.smogon.com/dex/media/sprites/xy/luxray.gif">
+				<br>
+				<span class="yellow-text gray-button"> Luxray </span>
+			</div>
+			<br>
+			<div>
 				<img src="http://www.smogon.com/dex/media/sprites/xy/drapion.gif">
 				<br>
 				<span class="lavender-text gray-button"> Drapion </span>
@@ -398,16 +419,6 @@
 				<br>
 				<span class="red-text gray-button"> Infernape </span>
 			</div>
-			<br>
-			<div>
-				<img src="http://www.smogon.com/dex/media/sprites/xy/dialga.gif">
-				<br>
-				<span class="light-blue-text gray-button"> Dialga </span>
-			</div>
-		</div>
-		
-		<div class="white-outline centering third-width">
-
 		</div>
 	</div>
 </body>
