--- a/sub-cites/pokemon.html
+++ b/sub-cites/pokemon.html
@@ -25,9 +25,10 @@
 				
 			<h2> Recent News </h2>
 			<div>
-				<h3> Pok&eacute;mon Coming to Switch!</h3>
+				<h3> Pok&eacute;mon Let's Go Pikachu! and Pok&eacute;mon Let's Go Eevee! now in stores! </h3>
 				<img width = "600px" src="https://thumbor.forbes.com/thumbor/960x0/https%3A%2F%2Fblogs-images.forbes.com%2Fdavidthier%2Ffiles%2F2018%2F05%2FDeaLp6fVMAEzguS.jpg" alt="Let's Go">
-				<h3> New Pok&eacute;mon Introduced: Meltan and Melmetal </h3>
+				<h3> New Pok&eacute;mon: Meltan and Melmetal </h3>
+				<p class="white-text"> Obtainable in the games above by connecting to Pok&eacute;mon GO.  </p>
 				<img height="200px" src="https://img.pokemondb.net/artwork/meltan.jpg" alt="Meltan">
 				<img height="200px" src="https://img.pokemondb.net/artwork/melmetal.jpg" alt="Melmetal">
 			</div>
@@ -127,43 +128,17 @@
 			<a href="poke-teams.html" class="white-menu light-gray-text"> View My Teams </a>
 			<br>
 			
-			<h2 class="white-text"> Spooky Team 2018 </h2>
+			<h2 class="white-text"> Current Team - Pok&eacute;mon Let's Go Eevee! </h2>
 			<div>
-				<img src="https://play.pokemonshowdown.com/sprites/xyani/crobat.gif">
+				<img src="https://play.pokemonshowdown.com/sprites/xyani/pikachu-f.gif">
 				<br>
-				<span class="purple-text gray-button"> Crobat </span>
+				<span class="yellow-text gray-button"> Pikachu </span>
 			</div>
 			<br>
 			<div>
-				<img src="https://play.pokemonshowdown.com/sprites/xyani/zoroark.gif">
+				<img src="https://play.pokemonshowdown.com/sprites/xyani/eevee.gif">
 				<br>
-				<span class="purple-text gray-button"> Zoroark </span>
-			</div>
-			<br>
-			<div>
-				<img src="https://play.pokemonshowdown.com/sprites/xyani/chandelure.gif">
-				<br>
-				<span class="purple-text gray-button"> Chandelure </span>
-			</div>
-			<br>
-			<br>
-			<div>
-				<img src="https://play.pokemonshowdown.com/sprites/xyani/ariados.gif">
-				<br>
-				<span class="purple-text gray-button"> Ariados </span>
-			</div>
-			<br>
-			<div>
-				<img src="https://play.pokemonshowdown.com/sprites/xyani/gourgeist.gif">
-				<br>
-				<span class="purple-text gray-button"> Gourgeist </span>
-			</div>
-			<br>
-			<div>
-				<img src="https://play.pokemonshowdown.com/sprites/xyani/banette-mega.gif">
-				<br>
-				<span class="purple-text gray-button"> Banette 
-				<img width="15px" src="https://pokemythology.net/conteudo/imgs/info/equip_keystone.png"> </span>
+				<span class="tan-text gray-button"> Eevee </span>
 			</div>
 			
 			<br>
@@ -195,7 +170,7 @@
 			<div>
 				<img src="http://www.smogon.com/dex/media/sprites/xy/sylveon.gif">
 				<br>
-				<span class="light-pink-text gray-button"> Sylveon </span>
+				<span class="light-pink-text gray-button"> Sylveon <br> "Pride" </span>
 			</div>
 			<br>
 			<div>
