Updated Pokemon team

--- a/sub-cites/computer-science/cs315index.html
+++ b/sub-cites/computer-science/cs315index.html
@@ -15,5 +15,6 @@
 	<h3> <a href="http://ice.truman.edu/~bcr7812/assignment_2/hw2start.html" class="gray-button"> Assignment 2 </a> </h3>
 	<h3> <a href="http://ice.truman.edu/~bcr7812/assignment_3/quiz.php" class="gray-button"> Assignment 3 </a> </h3>
 	<h3> <a href="http://ice.truman.edu/~bcr7812/assignment_4/dates.html" class="gray-button"> Assignment 4 </a> </h3>
+	<h3> <a href="http://ice.truman.edu/~bcr7812/assignment_4/entry_5.php" class="gray-button"> Assignment 5 </a> </h3>
 </body>
 </html>
