--- a/sub-cites/poke-teams.html
+++ b/sub-cites/poke-teams.html
@@ -107,6 +107,18 @@
 			</div>
 			<br>
 			<div>
+				<img width="50px" src="gaming/meltan-sprite.png">
+				<br>
+				<span class="light-gray-text gray-button"> Meltan </span>
+			</div>
+			<br>
+			<div>
+				<img src="https://play.pokemonshowdown.com/sprites/xyani/charmeleon.gif">
+				<br>
+				<span class="red-orange-text gray-button"> Charmeleon </span>
+			</div>
+			<br>
+			<div>
 				<img src="https://play.pokemonshowdown.com/sprites/xyani/eevee.gif">
 				<br>
 				<span class="tan-text gray-button"> Eevee </span>
