Changed profile picture and a few other small things.

--- a/sub-cites/pokemon.html
+++ b/sub-cites/pokemon.html
@@ -130,9 +130,15 @@
 			
 			<h2 class="white-text"> Current Team - Pok&eacute;mon Let's Go Eevee! </h2>
 			<div>
-				<img src="https://play.pokemonshowdown.com/sprites/xyani/pikachu-f.gif">
+				<img src="https://play.pokemonshowdown.com/sprites/xyani/raichu.gif">
 				<br>
-				<span class="yellow-text gray-button"> Pikachu </span>
+				<span class="yellow-text gray-button">Raichu<br>"Ryan"</span>
+			</div>
+			<br>
+			<div>
+				<img src="https://play.pokemonshowdown.com/sprites/xyani/raichu-alola.gif">
+				<br>
+				<span class="yellow-text gray-button"> Raichu </span>
 			</div>
 			<br>
 			<div>
@@ -144,13 +150,13 @@
 			<div>
 				<img src="https://play.pokemonshowdown.com/sprites/xyani/lapras.gif">
 				<br>
-				<span class="blue-text gray-button"> Lapras </span>
+				<span class="light-blue-text gray-button"> Lapras </span>
 			</div>
 			<br>
 			<div>
-				<img src="https://play.pokemonshowdown.com/sprites/xyani/charmeleon.gif">
+				<img src="https://play.pokemonshowdown.com/sprites/xyani/charizard.gif">
 				<br>
-				<span class="red-orange-text gray-button"> Charmeleon </span>
+				<span class="pale-orange-text gray-button"> Charizard </span>
 			</div>
 			<br>
 			<div>
