--- a/sub-cites/running.html
+++ b/sub-cites/running.html
@@ -21,7 +21,7 @@
 			<table class="race-results">	
 				<tr> <td class="headline"> Distance </td><td class="result"> Half Marathon </td> </tr>
 				<tr> <td class="headline"> Time </td> <td class="result"> 02:11:50 </td> </tr>
-				<tr> <td class="headline"> Position </td> <td class="result"> 4229 of 202 </td> </tr>
+				<tr> <td class="headline"> Position </td> <td class="result"> 4229 of ... a lot </td> </tr>
 				<tr> <td class="headline"> Location </td><td class="result"> Las Vegas, Nevada </td> </tr>
 				<tr> <td class="headline"> Age </td> <td class="result"> 21 </td> </tr>
 			</table>
