Pokemon Battle page initial commit

--- a/index.html
+++ b/index.html
@@ -1,30 +1,13 @@
 <!DOCTYPE html>
 <html lang="eng">
 <head>
-	<title> Brandon's Webpage </title>
-	<link rel="stylesheet" href="styles.css">
+	<title> Minecraft - Mario Kart 7 Rainbow Road </title>
+	<link rel="stylesheet" href="../../styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no">
 </head>
 <body>
-	<div class="top-strip centering">	
-		<a href="sub-cites/computer-science.html" class="gray-button" > Computer Science </a>
-		<a href="sub-cites/gaming.html" class="gray-button">  Gaming </a>
-		<a href="sub-cites/piano.html" class="gray-button"> Piano </a>
-		<a href="sub-cites/art.html" class="gray-button"> Art </a> 
-		<a href="sub-cites/running.html" class="gray-button"> Running </a> 
+	<div class="top-strip left-align">
+		<a href="../art.html" class="gray-button"> Back </a>
 	</div>
-	<div class="centering">
-		<h1> Brandon C. Ruoff </h1>
-	
-		<div> 
-			<img class="profile-pic" alt="Profile Picture" src="pictures/FacebookProfilePicJanuary2019.jpg">
-		</div>
-		<div class="white-text">
-			<h2> Contact me: </h2>
-			E-mail: brandoru15@gmail.com
-		</div>
-		<br>
-	</div>
-	
 </body>
 </html>
