--- a/sub-cites/art/minecraftmk7.html
+++ b/sub-cites/art/minecraftmk7.html
@@ -10,43 +10,44 @@
 		<a href="../art.html" class="gray-button"> Back </a>
 	</div>
 	<h1>  Minecraft - Mario Kart 7 Rainbow Road <h1>
-	<p class="center-whole">
-		<img class="minecraft-mk7"; src="minecraftmk7/20180319-001.jpg" >
-	</p>
-		<img class="minecraft-mk7"; src="minecraftmk7/20180319-002.jpg" >
-		<img class="minecraft-mk7"; src="minecraftmk7/20180319-003.jpg" >
-		<img class="minecraft-mk7"; src="minecraftmk7/20180319-004.jpg" >
-		<img class="minecraft-mk7"; src="minecraftmk7/20180319-005.jpg" >
-		<img class="minecraft-mk7"; src="minecraftmk7/20180319-006.jpg" >
-		<img class="minecraft-mk7"; src="minecraftmk7/20180319-007.jpg" >
-		<img class="minecraft-mk7"; src="minecraftmk7/20180319-008.jpg" >
-		<img class="minecraft-mk7"; src="minecraftmk7/20180319-009.jpg" >
-		<img class="minecraft-mk7"; src="minecraftmk7/20180319-010.jpg" >
-		<img class="minecraft-mk7"; src="minecraftmk7/20180319-011.jpg" >
-		<img class="minecraft-mk7"; src="minecraftmk7/20180319-012.jpg" >
-		<img class="minecraft-mk7"; src="minecraftmk7/20180319-013.jpg" >
-		<img class="minecraft-mk7"; src="minecraftmk7/20180319-014.jpg" >
-		<img class="minecraft-mk7"; src="minecraftmk7/20180319-015.jpg" >
-		<img class="minecraft-mk7"; src="minecraftmk7/20180319-016.jpg" >
-		<img class="minecraft-mk7"; src="minecraftmk7/20180319-017.jpg" >
-		<img class="minecraft-mk7"; src="minecraftmk7/20180319-018.jpg" >
-		<img class="minecraft-mk7"; src="minecraftmk7/20180319-019.jpg" >
-		<img class="minecraft-mk7"; src="minecraftmk7/20180319-020.jpg" >
-		<img class="minecraft-mk7"; src="minecraftmk7/20180319-021.jpg" >
-		<img class="minecraft-mk7"; src="minecraftmk7/20180319-022.jpg" >
-		<img class="minecraft-mk7"; src="minecraftmk7/20180319-023.jpg" >
-		<img class="minecraft-mk7"; src="minecraftmk7/20180319-024.jpg" >
-		<img class="minecraft-mk7"; src="minecraftmk7/20180319-025.jpg" >
-		<img class="minecraft-mk7"; src="minecraftmk7/20180319-026.jpg" >
-		<img class="minecraft-mk7"; src="minecraftmk7/20180319-027.jpg" >
-		<img class="minecraft-mk7"; src="minecraftmk7/20180319-028.jpg" >
-		<img class="minecraft-mk7"; src="minecraftmk7/20180319-029.jpg" >
-		<img class="minecraft-mk7"; src="minecraftmk7/20180319-030.jpg" >
-		<img class="minecraft-mk7"; src="minecraftmk7/20180319-031.jpg" >
-		<img class="minecraft-mk7"; src="minecraftmk7/20180319-032.jpg" >
-		<img class="minecraft-mk7"; src="minecraftmk7/20180319-033.jpg" >
-		<img class="minecraft-mk7"; src="minecraftmk7/20180319-034.jpg" >
-		
+	<div class="center-whole">
+		<img class="minecraft-mk7"; src="minecraftmk7/20180319-001.jpg">
+		<img class="minecraft-mk7"; src="minecraftmk7/MK7_Rainbow_Road_Map.png">
+		</div>
+			<img class="minecraft-mk7"; src="minecraftmk7/20180319-002.jpg" >
+			<img class="minecraft-mk7"; src="minecraftmk7/20180319-003.jpg" >
+			<img class="minecraft-mk7"; src="minecraftmk7/20180319-004.jpg" >
+			<img class="minecraft-mk7"; src="minecraftmk7/20180319-005.jpg" >
+			<img class="minecraft-mk7"; src="minecraftmk7/20180319-006.jpg" >
+			<img class="minecraft-mk7"; src="minecraftmk7/20180319-007.jpg" >
+			<img class="minecraft-mk7"; src="minecraftmk7/20180319-008.jpg" >
+			<img class="minecraft-mk7"; src="minecraftmk7/20180319-009.jpg" >
+			<img class="minecraft-mk7"; src="minecraftmk7/20180319-010.jpg" >
+			<img class="minecraft-mk7"; src="minecraftmk7/20180319-011.jpg" >
+			<img class="minecraft-mk7"; src="minecraftmk7/20180319-012.jpg" >
+			<img class="minecraft-mk7"; src="minecraftmk7/20180319-013.jpg" >
+			<img class="minecraft-mk7"; src="minecraftmk7/20180319-014.jpg" >
+			<img class="minecraft-mk7"; src="minecraftmk7/20180319-015.jpg" >
+			<img class="minecraft-mk7"; src="minecraftmk7/20180319-016.jpg" >
+			<img class="minecraft-mk7"; src="minecraftmk7/20180319-017.jpg" >
+			<img class="minecraft-mk7"; src="minecraftmk7/20180319-018.jpg" >
+			<img class="minecraft-mk7"; src="minecraftmk7/20180319-019.jpg" >
+			<img class="minecraft-mk7"; src="minecraftmk7/20180319-020.jpg" >
+			<img class="minecraft-mk7"; src="minecraftmk7/20180319-021.jpg" >
+			<img class="minecraft-mk7"; src="minecraftmk7/20180319-022.jpg" >
+			<img class="minecraft-mk7"; src="minecraftmk7/20180319-023.jpg" >
+			<img class="minecraft-mk7"; src="minecraftmk7/20180319-024.jpg" >
+			<img class="minecraft-mk7"; src="minecraftmk7/20180319-025.jpg" >
+			<img class="minecraft-mk7"; src="minecraftmk7/20180319-026.jpg" >
+			<img class="minecraft-mk7"; src="minecraftmk7/20180319-027.jpg" >
+			<img class="minecraft-mk7"; src="minecraftmk7/20180319-028.jpg" >
+			<img class="minecraft-mk7"; src="minecraftmk7/20180319-029.jpg" >
+			<img class="minecraft-mk7"; src="minecraftmk7/20180319-030.jpg" >
+			<img class="minecraft-mk7"; src="minecraftmk7/20180319-031.jpg" >
+			<img class="minecraft-mk7"; src="minecraftmk7/20180319-032.jpg" >
+			<img class="minecraft-mk7"; src="minecraftmk7/20180319-033.jpg" >
+			<img class="minecraft-mk7"; src="minecraftmk7/20180319-034.jpg" >	
+		</div>
 	</div>
 </body>
 </html>
