--- a/sub-cites/pokemon_battle.html
+++ b/sub-cites/pokemon_battle.html
@@ -14,8 +14,9 @@
 	
 	<div class="battle-canvas">
 		<div class="battle-area">
-				<img class="opponent-poke" src="https://play.pokemonshowdown.com/sprites/xyani/darkrai.gif">
+				<img class="opponent-poke" src="https://play.pokemonshowdown.com/sprites/xyani/darkrai.gif" alt="opponent pokemon">
 				<img class="player-poke" src="https://play.pokemonshowdown.com/sprites/xyani-back/sylveon.gif">
+				<div class="
 		</div>
 		<div class="text-area">
 			Text area
