Fixed links to Pokemon Battle

--- a/sub-cites/pokemon-battle.html
+++ b/sub-cites/pokemon-battle.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div class="top-strip left-align">
-		<a href="../pokemon.html" class="gray-button"> Back </a>
+		<a href="pokemon.html" class="gray-button"> Back </a>
 	</div>
 	
 	<div class="battle-canvas">
