--- a/sub-cites/pokemon.html
+++ b/sub-cites/pokemon.html
@@ -127,6 +127,8 @@
 			<br>
 			<a href="poke-teams.html" class="white-menu light-gray-text"> View My Teams </a>
 			<br>
+			<a href="pokemon-battle.html" class="white-menu light-gray-text"> Battle Online </a>
+			<br>
 			
 			<h2 class="white-text"> Current Team - Pok&eacute;mon Let's Go Eevee! </h2>
 			<div>
