Small file and format corrections

--- a/index.html
+++ b/index.html
@@ -10,15 +10,14 @@
 </head>
 <body>
 	<div class="top-strip centering">	
-		<a href="sub-cites/computer-science.html" class="gray-button" > Computer Science </a>
-		<a href="sub-cites/gaming.html" class="gray-button">  Gaming </a>
-		<a href="sub-cites/piano.html" class="gray-button"> Piano </a>
-		<a href="sub-cites/art.html" class="gray-button"> Art </a> 
-		<a href="sub-cites/running.html" class="gray-button"> Running </a> 
+		<a href="sub-sites/computer-science.html" class="gray-button" > Computer Science </a>
+		<a href="sub-sites/gaming.html" class="gray-button">  Gaming </a>
+		<a href="sub-sites/piano.html" class="gray-button"> Piano </a>
+		<a href="sub-sites/art.html" class="gray-button"> Art </a> 
+		<a href="sub-sites/running.html" class="gray-button"> Running </a> 
 	</div>
 	<div class="centering">
 		<h1> Brandon C. Ruoff </h1>
-	
 		<div> 
 			<img class="profile-pic" alt="Profile Picture" src="pictures/FacebookProfilePicJanuary2019.jpg">
 		</div>
