--- a/sub-sites/pokemon.html
+++ b/sub-sites/pokemon.html
@@ -4,12 +4,12 @@
 	<title>Brandon's Pok&eacute;mon Page</title>
 	<link rel="stylesheet" href="../styles.css">
 	<link rel="stylesheet" href="styles-poke.css">
-	<meta name="theme-color" content="#999999" />
+	
 	<!-- meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no" -->
 </head>
 <body>
 	<div class="top-strip left-align">
-		<a href="" class="gray-button"> Back </a>
+		<a href="gaming.html" class="gray-button"> Back </a>
 	</div>
 	<div class="centering">
 		<img class="heading" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/98/International_Pok%C3%A9mon_logo.svg/2000px-International_Pok%C3%A9mon_logo.svg.png" alt="Pokemon Logo">
