Added design details and first draft of email button

--- a/index.html
+++ b/index.html
@@ -8,25 +8,26 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="#353635">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no">
 </head>
-<body>
+<body class="margin-top">
 	<div class="top-strip centering">	
-		<a href="sub-sites/computer-science.html" class="gray-button" > Computer Science </a>
-		<a href="sub-sites/gaming.html" class="gray-button">  Gaming </a>
-		<a href="sub-sites/piano.html" class="gray-button"> Piano </a>
-		<a href="sub-sites/art.html" class="gray-button"> Art </a> 
-		<a href="sub-sites/running.html" class="gray-button"> Running </a> 
+		<a href="sub-sites/computer-science.html" class="gray-button gray-button-top" > Computer Science </a>
+		<a href="sub-sites/gaming.html" class="gray-button gray-button-top">  Gaming </a>
+		<a href="sub-sites/piano.html" class="gray-button gray-button-top"> Piano </a>
+		<a href="sub-sites/art.html" class="gray-button gray-button-top"> Art </a> 
+		<a href="sub-sites/running.html" class="gray-button gray-button-top"> Running </a> 
 	</div>
 	<div class="centering">
+		<img class="sombra-skull" src='pictures/sombra-skull.png' alt='sombra' /> <br><br>
+		
 		<h1> Brandon C. Ruoff </h1>
 		<div> 
-			<img class="profile-pic" alt="Profile Picture" src="pictures/FacebookProfilePicJanuary2019.jpg">
+			<img class="profile-pic purple-glow"" alt="Profile Picture" src="pictures/FacebookProfilePicJanuary2019.jpg">
 		</div>
 		<div class="white-text">
 			<h2> Contact me: </h2>
-			E-mail: brandoru15@gmail.com
+			<button class="gray-button" onclick="window.open('mailto:brandoru15@gmail.com')">brandoru15@gmail.com</button>
 		</div>
 		<br>
 	</div>
-	
 </body>
 </html>
