Made some fine tunings to front page

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 		<a href="sub-sites/running.html" class="gray-button gray-button-top"> Running </a> 
 	</div>
 	<div class="centering">
-		<img class="sombra-skull" src='pictures/sombra-skull.png' alt='sombra' /> <br><br>
+		<img class="sombra-skull" src='pictures/sombra-skull.png' alt='sombra' />
 		
-		<h1> Brandon C. Ruoff </h1>
+		<h1 class="purple-glow"> Brandon C. Ruoff </h1>
 		<div> 
-			<img class="profile-pic purple-glow"" alt="Profile Picture" src="pictures/FacebookProfilePicJanuary2019.jpg">
+			<img class="profile-pic purple-glow" alt="Profile Picture" src="pictures/FacebookProfilePicJanuary2019.jpg">
 		</div>
 		<div class="white-text">
 			<h2> Contact me: </h2>
