Finished Running page

--- a/index.html
+++ b/index.html
@@ -16,13 +16,19 @@
 		<a href="sub-sites/art.html" class="gray-button gray-button-top"> Art </a> 
 		<a href="sub-sites/running.html" class="gray-button gray-button-top"> Running </a> 
 	</div>
-	<div class="centering">
+	
+	<div class="centering purple-glow">
 		<img class="sombra-skull" src='pictures/sombra-skull.png' alt='sombra' />
+		
+		<hr class="index">
 		
 		<h1 class="purple-glow"> Brandon C. Ruoff </h1>
 		<div> 
 			<img class="profile-pic purple-glow" alt="Profile Picture" src="pictures/FacebookProfilePicJanuary2019.jpg">
 		</div>
+		
+		<hr class="index">
+		
 		<div class="white-text">
 			<h2> Contact me: </h2>
 			<button class="gray-button" onclick="window.open('mailto:brandoru15@gmail.com')">brandoru15@gmail.com</button>
