--- a/sub-sites/computer-science.html
+++ b/sub-sites/computer-science.html
@@ -12,15 +12,15 @@
 	<div class="centering">
 		<h1> Computer Science </h2>
 		<br>
-		<h3> <a href="https://github.com/brandonruoff8" class="gray-button">  GitHub </a> </h3>
+		<a href="https://github.com/brandonruoff8" class="gray-button">  GitHub </a>
 		<p> View my Github account </p>
 		
-		<h3> <a href="computer-science/practice-problems.html" class="gray-button">  Practice Problems </a> </h3>
+		<a href="computer-science/practice-problems.html" class="gray-button">  Practice Problems </a>
 		<p> 
 			Some practice problems to test my programming abilities.
 		</p>
 		
-		<h3> <a href="computer-science/cs315index.html" class="gray-button"> CS 315 Internet Programming </a> </h3>
+		<a href="computer-science/cs315index.html" class="gray-button"> CS 315 Internet Programming </a>
 	</div>
 </body>
 </html>
