--- a/sub-sites/computer-science/practice-problems.html
+++ b/sub-sites/computer-science/practice-problems.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div class="top-strip">
-		<a href="../computer-science.html" class="back-button"> Back </a>
+		<a href="../computer-science.html" class="gray-button"> Back </a>
 	</div>
 	<h1> Practice Problems </h1>
 	
