--- a/sub-sites/running.html
+++ b/sub-sites/running.html
@@ -10,39 +10,52 @@
 			<a href="../index.html" class="gray-button"> Back </a>
 		</div>
 		
-		<h2 class="red-text"> Warning: This page is under construction. <h2>
-		
 		<h1> Running </h1>
 		
-		<br>
+		<div class="organize">	
+			<div class="race-results">
+				<a class="gray-button" href="https://www.runrocknroll.com/it/events/las-vegas/the-races/results">Rock N Roll Run - November 2018 </a> 
+				<table class="full-width">	
+					<tr> <td class="headline"> Distance </td> <td class="result"> Half Marathon </td> </tr>
+					<tr> <td class="headline"> Time </td> <td class="result"> 02:11:50 </td> </tr>
+					<tr> <td class="headline"> Position </td> <td class="result"> 4,229 of  </td> </tr>
+					<tr> <td class="headline"> Location </td> <td class="result"> Las Vegas, Nevada </td> </tr>
+					<tr> <td class="headline"> Age </td> <td class="result"> 21 </td> </tr>
+				</table>
+			</div>
+				
+			<div class="race-results">
+				<a class="gray-button" href="https://runsignup.com/Race/Results/19929/IndividualResult/kqtc?#U21301441">Broadway Bridge - June 2018 </a> 
+				<table class="full-width">	
+					<tr> <td class="headline"> Distance </td> <td class="result"> 10k </td> </tr>
+					<tr> <td class="headline"> Time </td> <td class="result"> 00:49:50 </td> </tr>
+					<tr> <td class="headline"> Position </td> <td class="result"> 34 of 562 </td> </tr>
+					<tr> <td class="headline"> Location </td> <td class="result"> Kansas City, Missouri </td> </tr>
+					<tr> <td class="headline"> Age </td> <td class="result"> 20 </td> </tr>
+				</table>
+			</div>
 		
-		<div class="centering">	
-			<a class="gray-button" href="https://www.runrocknroll.com/it/events/las-vegas/the-races/results">Rock N Roll Run - November 2018 </a> <br><br>
-			<table class="race-results">	
-				<tr> <td class="headline"> Distance </td><td class="result"> Half Marathon </td> </tr>
-				<tr> <td class="headline"> Time </td> <td class="result"> 02:11:50 </td> </tr>
-				<tr> <td class="headline"> Position </td> <td class="result"> 4229 of ... a lot </td> </tr>
-				<tr> <td class="headline"> Location </td><td class="result"> Las Vegas, Nevada </td> </tr>
-				<tr> <td class="headline"> Age </td> <td class="result"> 21 </td> </tr>
-			</table>
-		
-			<a class="gray-button" href="https://runsignup.com/Race/Results/19929/#resultSetId-130286;perpage:10"> Broadway Bridge - September 2016 </a> <br><br>
-			<table class="race-results">	
-				<tr> <td class="headline"> Distance </td><td class="result"> Half Marathon </td> </tr>
-				<tr> <td class="headline"> Time </td> <td class="result"> 01:57:43 </td> </tr>
-				<tr> <td class="headline"> Position </td> <td class="result"> 43 of 202 </td> </tr>
-				<tr> <td class="headline"> Location </td><td class="result"> Kansas City, Missouri </td> </tr>
-				<tr> <td class="headline"> Age </td> <td class="result"> 18 </td> </tr>
-			</table>
+			<div class="race-results">
+				<a class="gray-button" href="https://runsignup.com/Race/Results/19929/#resultSetId-130286;perpage:10"> Broadway Bridge - September 2016 </a> 
+				<table class="full-width">	
+					<tr> <td class="headline"> Distance </td><td class="result"> Half Marathon </td> </tr>
+					<tr> <td class="headline"> Time </td> <td class="result"> 01:57:43 </td> </tr>
+					<tr> <td class="headline"> Position </td> <td class="result"> 43 of 202 </td> </tr>
+					<tr> <td class="headline"> Location </td><td class="result"> Kansas City, Missouri </td> </tr>
+					<tr> <td class="headline"> Age </td> <td class="result"> 18 </td> </tr>
+				</table>
+			</div>
 			
-			<a class="gray-button" href="https://results.chronotrack.com/event/results/event/event-21517"> Hospital Hill - June 2016 </a> <br><br>
-			<table class="race-results">	
-				<tr> <td class="headline"> Distance </td><td class="result"> Half Marathon </td> </tr>
-				<tr> <td class="headline"> Time </td> <td class="result"> 02:10:35 </td> </tr>
-				<tr> <td class="headline"> Position </td> <td class="result"> 970 of 2221 </td> </tr>
-				<tr> <td class="headline"> Location </td><td class="result"> Kansas City, Missouri </td> </tr>
-				<tr> <td class="headline"> Age </td> <td class="result"> 18 </td> </tr>
-			</table>
+			<div class="race-results">
+				<a class="gray-button" href="https://results.chronotrack.com/event/results/event/event-21517"> Hospital Hill - June 2016 </a> 
+				<table class="full-width">	
+					<tr> <td class="headline"> Distance </td> <td class="result"> Half Marathon </td> </tr>
+					<tr> <td class="headline"> Time </td> <td class="result"> 02:10:35 </td> </tr>
+					<tr> <td class="headline"> Position </td> <td class="result"> 970 of 2221 </td> </tr>
+					<tr> <td class="headline"> Location </td> <td class="result"> Kansas City, Missouri </td> </tr>
+					<tr> <td class="headline"> Age </td> <td class="result"> 18 </td> </tr>
+				</table>
+			</div>
 		</div>
 		
 	</body>
