--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 	</div>
 	
 	<div class="centering purple-glow">
-		<img class="sombra-skull" src='pictures/sombra-skull.png' alt='sombra' />
+		<img class="sombra-skull purple-glow" src='pictures/sombra-skull.png' alt='sombra' />
 		
 		<hr class="index">
 		
-		<h1 class="purple-glow"> Brandon C. Ruoff </h1>
+		<h1 class=""> Brandon C. Ruoff </h1>
 		<div> 
-			<img class="profile-pic purple-glow" alt="Profile Picture" src="pictures/FacebookProfilePicJanuary2019.jpg">
+			<img class="profile-pic" alt="Profile Picture" src="pictures/FacebookProfilePicJanuary2019.jpg">
 		</div>
 		
 		<hr class="index">
