Made a few small content changes.

--- a/index.html
+++ b/index.html
@@ -18,11 +18,15 @@
 	</div>
 	
 	<div class="centering purple-glow">
-		<img class="sombra-skull purple-glow" src='pictures/sombra-skull.png' alt='sombra' />
+		<div class="purple-glow">
+			<img class="sombra-skull purple-glow" src='pictures/sombra-skull.png' alt='sombra' />
+		</div>
 		
 		<hr class="index">
 		
-		<h1 class=""> Brandon C. Ruoff </h1>
+		<div class="purple-glow">
+			<h1 class=""> Brandon C. Ruoff </h1>
+		</div>
 		<div> 
 			<img class="profile-pic" alt="Profile Picture" src="pictures/FacebookProfilePicJanuary2019.jpg">
 		</div>
@@ -30,7 +34,9 @@
 		<hr class="index">
 		
 		<div class="white-text">
-			<h2> Contact me: </h2>
+			<div class="purple-glow">
+				<h2> Contact me: </h2>
+			</div>
 			<button class="gray-button" onclick="window.open('mailto:brandoru15@gmail.com')">brandoru15@gmail.com</button>
 		</div>
 		<br>
