--- a/sub-sites/gaming.html
+++ b/sub-sites/gaming.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Brandon's Ranking Tracker</title>
 	<link rel="stylesheet" href="../styles.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes, maximum-scale=1, user-scalable=no">
 </head>
 <body>
 	<div class="top-strip align-left">	
