--- a/sub-sites/running.html
+++ b/sub-sites/running.html
@@ -18,7 +18,7 @@
 				<table class="full-width">	
 					<tr> <td class="headline"> Distance </td> <td class="result"> Half Marathon </td> </tr>
 					<tr> <td class="headline"> Time </td> <td class="result"> 02:11:50 </td> </tr>
-					<tr> <td class="headline"> Position </td> <td class="result"> 4,229 of  </td> </tr>
+					<tr> <td class="headline"> Position </td> <td class="result"> 4,229 of over 16,000  </td> </tr>
 					<tr> <td class="headline"> Location </td> <td class="result"> Las Vegas, Nevada </td> </tr>
 					<tr> <td class="headline"> Age </td> <td class="result"> 21 </td> </tr>
 				</table>
@@ -51,7 +51,7 @@
 				<table class="full-width">	
 					<tr> <td class="headline"> Distance </td> <td class="result"> Half Marathon </td> </tr>
 					<tr> <td class="headline"> Time </td> <td class="result"> 02:10:35 </td> </tr>
-					<tr> <td class="headline"> Position </td> <td class="result"> 970 of 2221 </td> </tr>
+					<tr> <td class="headline"> Position </td> <td class="result"> 970 of 2,221 </td> </tr>
 					<tr> <td class="headline"> Location </td> <td class="result"> Kansas City, Missouri </td> </tr>
 					<tr> <td class="headline"> Age </td> <td class="result"> 18 </td> </tr>
 				</table>
