Updated Running and Overwatch pages.

--- a/sub-sites/computer-science.html
+++ b/sub-sites/computer-science.html
@@ -6,21 +6,30 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no">
 </head>
 <body>
-	<div class="top-strip left-align">
-		<a href="../index.html" class="gray-button"> Back </a>
-	</div>
+	<div class="top-strip centering">
+		<a href="../index.html" class="back-button"> Back </a><span class="page-title"> Computer Science </span>
+	</div>	
+	
 	<div class="centering">
-		<h1> Computer Science </h2>
 		<br>
-		<a href="https://github.com/brandonruoff8" class="gray-button">  GitHub </a>
 		<p> View my Github account </p>
-		
-		<a href="computer-science/practice-problems.html" class="gray-button">  Practice Problems </a>
+		<a href="https://github.com/brandonruoff8" class="gray-button">  GitHub </a>
+		<br>
 		<p> 
 			Some practice problems to test my programming abilities.
 		</p>
-		
+		<a href="computer-science/practice-problems.html" class="gray-button">  Practice Problems </a>
+		<br>
+		<p> 
+			Assignments from CS315 Internet Programming at Truman State
+		</p>
 		<a href="computer-science/cs315index.html" class="gray-button"> CS 315 Internet Programming </a>
+		<br>
+		<p>
+			I am currently trying to move a Pok&eacute;mon battle simulator that I wrote in Java into Javascript so that
+			it can be played on my website. This is a work in progress.
+		</p>
+		<a href="pokemon-battle.html" class="gray-button"> Pok&eacute;mon Battle Simulator </a>
 	</div>
 </body>
 </html>
