--- a/sub-sites/piano.html
+++ b/sub-sites/piano.html
@@ -6,10 +6,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no">
 </head>
 <body>
-	<div class="top-strip left-align">
-		<a href="../index.html" class="gray-button"> Back </a>
-	</div>
-	<h1> Piano </h1>
+	<div class="top-strip centering">
+		<a href="../index.html" class="back-button"> Back </a><span class="page-title"> Piano </span>
+	</div>	
+	
 	<div class="center-whole">
 		<h2 class="white-text"> Songs I Can Play </h2>
 
