--- a/sub-sites/pokemon.html
+++ b/sub-sites/pokemon.html
@@ -8,9 +8,9 @@
 	<!-- meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no" -->
 </head>
 <body>
-	<div class="top-strip left-align">
-		<a href="gaming.html" class="gray-button"> Back </a>
-	</div>
+	<div class="top-strip centering">
+		<a href="../index.html" class="back-button"> Back </a>
+	</div>		
 	<div class="centering">
 		<img class="heading" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/98/International_Pok%C3%A9mon_logo.svg/2000px-International_Pok%C3%A9mon_logo.svg.png" alt="Pokemon Logo">
 	</div>
@@ -128,7 +128,7 @@
 			<br>
 			<a href="poke-teams.html" class="white-menu light-gray-text"> View My Teams </a>
 			<br>
-			<a href="pokemon-battle.html" class="white-menu light-gray-text"> Battle Online </a>
+			<a href="https://play.pokemonshowdown.com/" class="white-menu light-gray-text"> Battle Online </a>
 			<br>
 			
 			<h2 class="white-text"> Current Team - Pok&eacute;mon Let's Go Eevee! </h2>
