--- a/sub-sites/art.html
+++ b/sub-sites/art.html
@@ -6,10 +6,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no">
 </head>
 <body>
-	<div class="top-strip left-align">
-		<a href="../index.html" class="gray-button"> Back </a>
-	</div>
-	<h1> Art </h1>
+	<div class="top-strip centering">
+		<a href="../index.html" class="back-button"> Back </a><span class="page-title"> Art </span>
+	</div>	
+
 	<div class="centering">
 		<h2 class="white-text"> Minecraft </h2>
 		<h3> Mario Kart 7  - Rainbow Road </h3>
