--- a/sub-sites/running.html
+++ b/sub-sites/running.html
@@ -6,54 +6,92 @@
 		<link rel="stylesheet" href="styles-run.css">
 	</head>
 	<body>
-		<div class="top-strip left-align">
-			<a href="../index.html" class="gray-button"> Back </a>
-		</div>
-		
-		<h1> Running </h1>
-		
+		<div class="top-strip centering">
+			<a href="../index.html" class="back-button"> Back </a><span class="page-title"> Running </span>
+		</div>		
+			
 		<div class="organize">	
 			<div class="race-results">
-				<a class="gray-button" href="https://www.runrocknroll.com/it/events/las-vegas/the-races/results">Rock N Roll Run - November 2018 </a> 
+				<a class="gray-button" href="https://sites.google.com/site/parkvilleturkeytrot/results?authuser=0">Turkey Trot - November 2018</a> 
+				<table class="full-width">	
+					<tr> <td class="headline"> Distance </td> <td class="result"> 5k </td> </tr>
+					<tr> <td class="headline"> Time </td> <td class="result"> 00:22:21 </td> </tr>
+					<tr> <td class="headline"> Position </td> <td class="result"> 110 of 1,210  </td> </tr>
+					<tr> <td class="headline"> Location </td> <td class="result"> Parkville, Missouri </td> </tr>
+					<tr> <td class="headline"> Age </td> <td class="result"> 21 </td> </tr>
+					<tr> <td class="headline"> Ran with </td> <td class="result"> Kelsey and Dad </td> </tr>
+				</table>
+			</div>
+			
+			<div class="race-results">
+				<a class="gray-button" href="https://www.runrocknroll.com/it/events/las-vegas/the-races/results"> Rock N Roll Run - November 2018</a> 
 				<table class="full-width">	
 					<tr> <td class="headline"> Distance </td> <td class="result"> Half Marathon </td> </tr>
 					<tr> <td class="headline"> Time </td> <td class="result"> 02:11:50 </td> </tr>
 					<tr> <td class="headline"> Position </td> <td class="result"> 4,229 of over 16,000  </td> </tr>
 					<tr> <td class="headline"> Location </td> <td class="result"> Las Vegas, Nevada </td> </tr>
 					<tr> <td class="headline"> Age </td> <td class="result"> 21 </td> </tr>
+					<tr> <td class="headline"> Ran with </td> <td class="result"> Kelsey </td> </tr>
 				</table>
 			</div>
 				
 			<div class="race-results">
-				<a class="gray-button" href="https://runsignup.com/Race/Results/19929/IndividualResult/kqtc?#U21301441">Broadway Bridge - June 2018 </a> 
+				<a class="gray-button" href="https://runsignup.com/Race/Results/19929/IndividualResult/kqtc?#U21301441">Broadway Bridge - June 2018</a> 
 				<table class="full-width">	
 					<tr> <td class="headline"> Distance </td> <td class="result"> 10k </td> </tr>
 					<tr> <td class="headline"> Time </td> <td class="result"> 00:49:50 </td> </tr>
 					<tr> <td class="headline"> Position </td> <td class="result"> 34 of 562 </td> </tr>
 					<tr> <td class="headline"> Location </td> <td class="result"> Kansas City, Missouri </td> </tr>
 					<tr> <td class="headline"> Age </td> <td class="result"> 20 </td> </tr>
+					<tr> <td class="headline"> Ran with </td> <td class="result"> Kelsey </td> </tr>
+				</table>
+			</div>
+			
+			<div class="race-results">
+				<a class="gray-button" href="http://www.kcrunningcompany.com/results/?id=3483&show=results">Stars and Stripes - July 2017</a> 
+				<table class="full-width">	
+					<tr> <td class="headline"> Distance </td> <td class="result"> 5k </td> </tr>
+					<tr> <td class="headline"> Time </td> <td class="result"> 00:32:04 </td> </tr>
+					<tr> <td class="headline"> Position </td> <td class="result"> 346 of 810 </td> </tr>
+					<tr> <td class="headline"> Location </td> <td class="result"> Lee's Summit, Missouri </td> </tr>
+					<tr> <td class="headline"> Age </td> <td class="result"> 19 </td> </tr>
+					<tr> <td class="headline"> Ran with </td> <td class="result"> Allison M. </td> </tr>
 				</table>
 			</div>
 		
 			<div class="race-results">
-				<a class="gray-button" href="https://runsignup.com/Race/Results/19929/#resultSetId-130286;perpage:10"> Broadway Bridge - September 2016 </a> 
+				<a class="gray-button" href="https://runsignup.com/Race/Results/19929/#resultSetId-130286;perpage:10">Broadway Bridge - September 2016</a> 
 				<table class="full-width">	
 					<tr> <td class="headline"> Distance </td><td class="result"> Half Marathon </td> </tr>
 					<tr> <td class="headline"> Time </td> <td class="result"> 01:57:43 </td> </tr>
 					<tr> <td class="headline"> Position </td> <td class="result"> 43 of 202 </td> </tr>
 					<tr> <td class="headline"> Location </td><td class="result"> Kansas City, Missouri </td> </tr>
 					<tr> <td class="headline"> Age </td> <td class="result"> 18 </td> </tr>
+					<tr> <td class="headline"> Ran with </td> <td class="result"> Kelsey </td> </tr>
 				</table>
 			</div>
 			
 			<div class="race-results">
-				<a class="gray-button" href="https://results.chronotrack.com/event/results/event/event-21517"> Hospital Hill - June 2016 </a> 
+				<a class="gray-button" href="https://results.chronotrack.com/event/results/event/event-21517">Hospital Hill - June 2016</a> 
 				<table class="full-width">	
 					<tr> <td class="headline"> Distance </td> <td class="result"> Half Marathon </td> </tr>
 					<tr> <td class="headline"> Time </td> <td class="result"> 02:10:35 </td> </tr>
 					<tr> <td class="headline"> Position </td> <td class="result"> 970 of 2,221 </td> </tr>
 					<tr> <td class="headline"> Location </td> <td class="result"> Kansas City, Missouri </td> </tr>
 					<tr> <td class="headline"> Age </td> <td class="result"> 18 </td> </tr>
+					<tr> <td class="headline"> Ran with </td> <td class="result"> Kelsey </td> </tr>
+				</table>
+			</div>
+			
+			<div class="race-results">
+				<a class="gray-button" href="https://sites.google.com/site/parkvilleturkeytrot/results?authuser=0">Turkey Trot - November 2015</a> 
+				<table class="full-width">	
+					<tr> <td class="headline"> Distance </td> <td class="result"> 5k </td> </tr>
+					<tr> <td class="headline"> Time </td> <td class="result"> 00:21:59  </td> </tr>
+					<tr> <td class="headline"> Position </td> <td class="result"> 91 of 1,284  </td> </tr>
+					<tr> <td class="headline"> Location </td> <td class="result"> Parkville, Missouri </td> </tr>
+					<tr> <td class="headline"> Age </td> <td class="result"> 18 </td> </tr>
+					<tr> <td class="headline"> Ran with </td> <td class="result"> Kelsey </td> </tr>
 				</table>
 			</div>
 		</div>
