Created a start button that reveals the battle scene once pressed

--- a/sub-sites/pokemon-battle.html
+++ b/sub-sites/pokemon-battle.html
@@ -12,7 +12,7 @@
 	</div>
 	
 	<div class="battle-canvas">
-		<div class="battle-area">
+		<div class="battle-area" id="battle-area">
 			<div class="left-side">
 				<div class="opponent-status-bar" id="opponent-status-bar"> Xerneas </div>
 				<img class="player-poke" src="https://play.pokemonshowdown.com/sprites/xyani-back/yveltal.gif" alt="player pokemon" id="player-poke">
