Fixed visibility problem where start button took up too much space

--- a/sub-sites/pokemon-battle.html
+++ b/sub-sites/pokemon-battle.html
@@ -12,6 +12,9 @@
 	</div>
 	
 	<div class="battle-canvas">
+		<div class="centering">
+			<button type="button" class="gray-button start-button" id="start-button" onclick="initialize()"> Start </button>
+		</div>
 		<div class="battle-area" id="battle-area">
 			<div class="left-side">
 				<div class="opponent-status-bar" id="opponent-status-bar"> Xerneas </div>
@@ -33,9 +36,6 @@
 		</div>
 	</div>
 	<br>
-	<div class="centering">
-		<button type="button" class="gray-button" id="start-button" onclick="initialize()"> Start </button>
-	</div>
 
 </body>
 </html>
