Updated Art page

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 <body class="margin-top">
 	<div class="top-strip centering">	
-		<a href="sub-sites/computer-science.html" class="gray-button gray-button-top" > Computer Science </a>
-		<a href="sub-sites/gaming.html" class="gray-button gray-button-top">  Gaming </a>
-		<a href="sub-sites/piano.html" class="gray-button gray-button-top"> Piano </a>
-		<a href="sub-sites/art.html" class="gray-button gray-button-top"> Art </a> 
-		<a href="sub-sites/running.html" class="gray-button gray-button-top"> Running </a> 
+		<a href="sub-sites/computer-science.html" class="gray-button gray-button-top" >Computer Science</a>
+		<a href="sub-sites/gaming.html" class="gray-button gray-button-top">Gaming</a>
+		<a href="sub-sites/piano.html" class="gray-button gray-button-top">Piano</a>
+		<a href="sub-sites/art.html" class="gray-button gray-button-top">Arts</a> 
+		<a href="sub-sites/running.html" class="gray-button gray-button-top">Running</a> 
 	</div>
 	
 	<div class="centering purple-glow">
