--- a/sub-sites/art/minecraftmk7.html
+++ b/sub-sites/art/minecraftmk7.html
@@ -11,8 +11,8 @@
 	</div>
 	<h1>  Minecraft - Mario Kart 7 Rainbow Road <h1>
 	<div class="center-whole">
-		<img class="minecraft-mk7"; src="minecraftmk7/20180319-001.jpg">
-		<img class="minecraft-mk7"; src="minecraftmk7/MK7_Rainbow_Road_Map.png">
+		<img class="minecraft-mk7" src="minecraftmk7/20180319-001.jpg">
+		<img class="rotate180"  width="250px" src="minecraftmk7/MK7_Rainbow_Road_Map.png">
 		</div>
 			<img class="minecraft-mk7"; src="minecraftmk7/20180319-002.jpg" >
 			<img class="minecraft-mk7"; src="minecraftmk7/20180319-003.jpg" >
