--- a/sub-sites/computer-science.html
+++ b/sub-sites/computer-science.html
@@ -27,7 +27,9 @@
 		<br>
 		<p>
 			I am currently trying to move a Pok&eacute;mon battle simulator that I wrote in Java into Javascript so that
-			it can be played on my website. This is a work in progress.
+			it can be played on my website.
+			<br>
+			 <span class="red-text"> This is a work in progress. </span>
 		</p>
 		<a href="pokemon-battle.html" class="gray-button"> Pok&eacute;mon Battle Simulator </a>
 	</div>
